Fix Tasty spelling mistake
Replaced Tastey with Tasty so that it's spelt correctly.
It's easier to spot spelling mistakes using VScode :)

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ placeholder="email address"
 </section>
   
 <section id="section3">
-              <h2>Tastey</h2>
+              <h2>Tasty</h2>
               <p>
                 Our pizzas are class
               </p>
